[package]
name = "pag"
version = "0.1.0"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
crossterm = "0.20.0"
term_size = "0.3.2"
unicode-width = "0.1.8"
